About us modified

--- a/trainer/templates/trainer/index.html
+++ b/trainer/templates/trainer/index.html
@@ -60,9 +60,11 @@
                         <img src="{% static 'trainer/img/icons.png' %}" class="img-responsive tablet-img">
       </div>
                         <div class="col-sm-12 col-md-6 col-lg-6" data-aos="fade-left" data-aos-duration="1500">
-                            <p>Trainourstaff.com began in 2019. A common platform which faciliate organizations to find trainers to train their staff on different aspects like communication, computer skills, customer service, human relations, safety, quality management, benchmarking and in many other ways.
+                            <p>Trainourstaff.com began in 2017. A common platform which facilitate organizations to find trainers to train their staff on different aspects like communication,
+                                computer skills, customer service, human relations, safety, quality management, benchmarking and in many other ways by interacting with quality trainers.
 </p>
-                            <p>We come up with this idea after a depth market research to understand what is essential for employees satisfaction, motivation, financial gain and what could help to reduce employee turnover, enhance company image and help in risk management. The outcome of this is Trainourstaff.com
+                            <p>We come up with this idea after intense market research to understand what requisite for employees satisfaction, motivation, financial gain and what could help to
+                                reduce employee turnover, enhance company image and help in risk management. The outcome of this is Trainourstaff.com
 </p>
                             <p>Trainourstaff.com is a network of professional trainers who are expert in employee training.</p>
                         </div>
@@ -133,7 +135,7 @@
                                         trends and current market demands and that
                                         also keeping end users in mind. </p>
                                     <div class="client-name">
-                                        - Kalpesh Tawade
+                                        - Ganesh Girase
                                         <div class="client-designation">Founder & CEO</div>
                                     </div>
                                 </div>
@@ -146,7 +148,7 @@
                                         trends and current market demands and that
                                         also keeping end users in mind. </p>
                                     <div class="client-name">
-                                        - Kalpesh Tawade
+                                        - Sagar Pathak
                                         <div class="client-designation">Founder & CEO</div>
                                     </div>
                                 </div>
