--- a/trainer/templates/trainer/index.html
+++ b/trainer/templates/trainer/index.html
@@ -136,7 +136,7 @@
                                         also keeping end users in mind. </p>
                                     <div class="client-name">
                                         - Ganesh Girase
-                                        <div class="client-designation">Founder & CEO</div>
+                                        <!-- <div class="client-designation">Founder & CEO</div> -->
                                     </div>
                                 </div>
                             </div>
@@ -149,7 +149,7 @@
                                         also keeping end users in mind. </p>
                                     <div class="client-name">
                                         - Sagar Pathak
-                                        <div class="client-designation">Founder & CEO</div>
+                                        <!-- <div class="client-designation">Founder & CEO</div> -->
                                     </div>
                                 </div>
                             </div>
