--- a/corp_trainer/static/trainer/css/landing.css
+++ b/corp_trainer/static/trainer/css/landing.css
@@ -23,6 +23,10 @@
     outline: none;
 }
 
+.banner-image{
+    padding: 5% 0;
+}
+
 .stick-right {
     position: absolute;
     right: 0;
@@ -90,7 +94,7 @@ span.btn-input-search {
 }
 
 .navbar-menu>li>a {
-    /* font-size: 22px;*/
+    font-size: 14px;
     color: #fff !important;
     line-height: 40px;
     transition: 0.4s;
