--- a/trainer/templates/trainer/index.html
+++ b/trainer/templates/trainer/index.html
@@ -36,7 +36,7 @@
                 <div class="col-sm-12 col-md-5" data-aos="fade-up" data-aos-duration="1500">
                     <div class="banner-title stick-left">
                         <h1>FIND A TRAINER</h1>
-                        <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h4>
+                        <h4>Shortlist best trainers for wide range of skillsets</h4>
                         <div class="input-group">
                             <input type="text" class="form-control searchbox" placeholder="i.e Name, Technology..." aria-describedby="basic-addon2">
                             <span class="btn input-group-addon btn-input-search" id="basic-addon2" type="button"><i class="icon-search"></i></span>
