--- a/trainer/templates/trainer/user_listing.html
+++ b/trainer/templates/trainer/user_listing.html
@@ -42,10 +42,10 @@
                                     </div>
                                 </td>
                                 <td class="text-center">
-                                    <div class="hours-training">
+                                    <!--<div class="hours-training">
                                         <h5>TOTAL HOURS OF TRAINING</h5>
                                         <h4>185 Hrs.</h4>
-                                    </div>
+                                    </div>-->
                                 </td>
                                 <td class="text-right">
                                     <div class="ratings absolute-ratings">
