--- a/trainer/templates/trainer/user_listing.html
+++ b/trainer/templates/trainer/user_listing.html
@@ -81,15 +81,16 @@
         </div>
         <div class="text-right">
             <ul class="pagination corp-pagination">
-                <li><a href="#">←</a></li>
-                <li><a href="#">1</a></li>
-                <li class="active"><a href="#">2</a></li>
-                <li><a href="#">3</a></li>
-                <li><a href="#">4</a></li>
-                <li><a href="#">→</a></li>
+                <!-- <li><a href="#">First</a></li> -->
+                {% for i in pages %}
+                <li><a href="{% url 'trainer:listing' %}?page={{i}}">{{i}}</a></li>
+                <!-- <li><a href="{% url 'trainer:listing' %}?page=2">2</a></li>
+                <li><a href="{% url 'trainer:listing' %}?page=3">3</a></li>
+                <li><a href="{% url 'trainer:listing' %}?page=4">4</a></li> -->
+                {% endfor %}
+                <!-- <li><a href="{% url 'trainer:listing' %}?page=5">Last</a></li> -->
             </ul>
         </div>
     </div>
 </div>
-
 {% endblock %}
