--- a/trainer/templates/trainer/edit_profile.html
+++ b/trainer/templates/trainer/edit_profile.html
@@ -10,6 +10,7 @@
                 <div class="tab-section">
                     <ul class="nav nav-tabs flat-tabs">
                         <li class="active"><a data-toggle="tab" href="#skill"><i class="icon-visibility"></i> Skills</a></li>
+                        <li><a data-toggle="tab" href="#availability"><i class="icon-visibility"></i> Availability</a></li>
                         <li><a data-toggle="tab" href="#timeline"><i class="icon-visibility"></i> Timeline</a></li>
                         <li><a data-toggle="tab" href="#work"><i class="icon-card_travel"></i> Work Experience</a></li>
                         <li><a data-toggle="tab" href="#about"><i class="icon-person"></i> About</a></li>
@@ -49,6 +50,28 @@
                                             {% endfor %}
                                             </tbody>
                                         </table>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                        <div id="availability" class="tab-pane fade">
+                            <div class="info-sections">
+                                <form method="post" action="{% url 'trainer:availability' %}"   >
+                                    {% csrf_token %}
+                                    <button class="btn btn-edit pull-right m-b-lg"><i class="icon icon-mode_edit"></i></button>
+                                    <button class="btn btn-add pull-right m-b-lg"><i class="icon icon-check"></i></button>
+                                    <div class="row">
+                                        <div class="col-sm-4 m-b-lg">
+                                            <h4>MY AVAILABILITY</h4>
+                                            <div class="form-group">
+                                                <label>Locations</label>
+                                                {{availability_form.availability}}
+                                            </div>
+                                            <div class="form-group">
+                                                <label>Hours Per Week</label>
+                                                {{availability_form.hours_per_week}}
+                                            </div>
+                                        </div>
                                     </div>
                                 </form>
                             </div>
@@ -211,6 +234,7 @@
                                                 </select>
                                             </div>
                                         </div>
+                                    </div>
                                 </form>
                             </div>
                         </div>
