--- a/trainer/static/trainer/css/corporate.css
+++ b/trainer/static/trainer/css/corporate.css
@@ -601,9 +601,11 @@ table.table-timeline caption {
 }
 
 .profile-listing ul li.profile-result {
-    background-color: #fff;
+background-color: #fff;
     padding: 18px 24px;
-    border-top: 1px solid #e0e0e0;
+    border: 1px solid #e0e0e0;
+    margin-bottom: 14px;
+    box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.1);
 }
 
 .profile-listing ul li.profile-result a {
