Created Availability serializer

--- a/trainer/templates/trainer/edit_profile.html
+++ b/trainer/templates/trainer/edit_profile.html
@@ -3,7 +3,7 @@
 
 {% block body %}
 
-<div class="container" ng-app="message" ng-controller="messageController">
+<div class="container" ng-app="trainer" ng-controller="messageController">
     <div class="row">
         <div class="col-sm-12 col-xs-12">
             <div class="middle-section">
