--- a/trainer/templates/trainer/inbox.html
+++ b/trainer/templates/trainer/inbox.html
@@ -3,7 +3,7 @@
 
 {% block body %}
 {% if user.is_authenticated %}
-<div class="container" ng-app="message" ng-controller="messageController">
+<div class="container" ng-app="trainer" ng-controller="messageController">
   <div class="middle-section">
   <div class="search-result-header">
   	<h4>2 Unread Messages</h4>
