--- a/trainer/templates/trainer/send_message.html
+++ b/trainer/templates/trainer/send_message.html
@@ -1,4 +1,4 @@
-<div class="container" ng-app="message" ng-controller="messageController">
+<div class="container" ng-app="trainer" ng-controller="messageController">
     <!-- Modal Send Message-->
     <div id="message-modal" class="modal" role="dialog" ng-show="showMessageModal">
         <div class="modal-dialog">
