--- a/trainer/templates/trainer/test.html
+++ b/trainer/templates/trainer/test.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<body ng-app="message" ng-controller="messageController">
+<body ng-app="trainer" ng-controller="messageController">
     <strong>Angular</strong>
     <form ng-submit="messageAdd()">
         <input type="text" ng-model="inputMessage" placeholder="Type your message here">
