Profiles locations in listing view pointed to availability model

--- a/trainer/templates/trainer/user_listing.html
+++ b/trainer/templates/trainer/user_listing.html
@@ -37,7 +37,7 @@
                                         <!-- <h5><i class="icon-person_pin_circle"></i> {{profile.country}}</h5> -->
                                         <div class="table-skills">
                                             <h5>LOCATIONS AVAILABLE</h5>
-                                            <div class="table-skill-listing">Mumbai, Delhi, Pune</div>
+                                            <div class="table-skill-listing">{{profile.user.availability.locations}}</div>
                                         </div>
                                     </div>
                                 </td>
