--- a/trainer/templates/trainer/inbox.html
+++ b/trainer/templates/trainer/inbox.html
@@ -6,7 +6,7 @@
 <div class="container" ng-app="trainer" ng-controller="messageController">
   <div class="middle-section">
   <div class="search-result-header">
-  	<h4>2 Unread Messages</h4>
+  	<!-- <h4>2 Unread Messages</h4> -->
   	<div class="pull-right dropdown-cntnr">
   		<div class="dropdown">
 		  <button class="btn btn-default dropdown-toggle white-drop" type="button" data-toggle="dropdown"><span id="selected">Sort by:</span> 
@@ -26,7 +26,7 @@
       <div class="panel panel-default">
         <div class="panel-heading message-heading unread">
           <h5 class="panel-title">
-            <a data-toggle="collapse" data-parent="#accordion" href="[['#'+msg.msgId]]" class="message-subject">
+            <a data-toggle="collapse" data-parent="#accordion" href="[['#'+msg.msgId]]" class="message-subject" ng-click="readMessage(msg)">
             <span ng-bind="msg.msgText"></span>
             </a>
             <span class="pull-right message-time">
