--- a/trainer/templates/trainer/header.html
+++ b/trainer/templates/trainer/header.html
@@ -2,6 +2,7 @@
 <title>Train Our Staff</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="shortcut icon" type="image/png" href="{% static 'trainer/img/TOS_favicon.ico' %}">
 <link rel="stylesheet" href="{% static 'trainer/css/bootstrap.min.css' %}">
 {% if request.path != "/trainer/" %}
     <link rel="stylesheet" href="{% static 'trainer/css/corporate.css' %}">
