--- a/trainer/templates/trainer/navbar.html
+++ b/trainer/templates/trainer/navbar.html
@@ -10,7 +10,7 @@
             </button>
             <a href="{% url 'trainer:listing' %}">
                 <div class="navbar-brand logo-cntnr"><img
-                        src="{% static 'trainer/img/logo.png' %}"
+                        src="{% static 'trainer/img/TOS_logo.png' %}"
                         class="img-responsive">
                 </div>
             </a>
